@@ -1,14 +1,14 @@
 package org.datavaultplatform.webapp.controllers.admin;
 
 
+import org.apache.commons.lang3.StringUtils;
 import org.datavaultplatform.common.model.*;
 
 import org.datavaultplatform.common.request.CreateRetentionPolicy;
-import org.datavaultplatform.common.response.DepositInfo;
-import org.datavaultplatform.common.response.ReviewInfo;
-import org.datavaultplatform.common.response.VaultInfo;
-import org.datavaultplatform.common.response.VaultsData;
+import org.datavaultplatform.common.response.*;
+import org.datavaultplatform.common.util.PageDTOVaultInfo;
 import org.datavaultplatform.common.util.RoleUtils;
+import org.datavaultplatform.common.util.Utils;
 import org.datavaultplatform.webapp.model.DepositReviewModel;
 import org.datavaultplatform.webapp.model.VaultReviewModel;
 import org.datavaultplatform.webapp.services.RestService;
@@ -16,105 +16,115 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.autoconfigure.condition.ConditionalOnBean;
+import org.springframework.http.MediaType;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.ModelMap;
+import org.springframework.util.Assert;
+import org.springframework.validation.annotation.Validated;
 import org.springframework.web.bind.annotation.*;
 import org.springframework.web.servlet.mvc.support.RedirectAttributes;
 
-import java.util.ArrayList;
-import java.util.Comparator;
-import java.util.Date;
-import java.util.List;
-import java.util.stream.Collectors;
+import java.time.Clock;
+import java.time.LocalDate;
+import java.time.LocalDateTime;
+import java.util.*;
 
+import static org.datavaultplatform.common.util.Utils.*;
 
+@SuppressWarnings("CodeBlock2Expr")
 @Controller
 @ConditionalOnBean(RestService.class)
-public class AdminReviewsController {
+@Validated
+public class AdminReviewsController implements AdminReviewsControllerApi {
 
-    private static final Logger logger = LoggerFactory.getLogger(AdminReviewsController.class);
+    public static final Comparator<VaultInfo> BY_REVIEW_DATE_ASC = Comparator.comparing(
+            VaultInfo::getReviewDate,
+            Comparator.nullsLast(Comparator.naturalOrder())
+    );
+
+    private static final Logger LOG = LoggerFactory.getLogger(AdminReviewsController.class);
+    public static final String ACTION_CANCEL = "Cancel";
+    public static final String ACTION_SUBMIT = "Submit";
+    public static final String ACTION_SAVE = "Save";
 
     private final RestService restService;
+    private final Clock clock;
 
     @Autowired
-    public AdminReviewsController(RestService restService) {
+    public AdminReviewsController(RestService restService, Clock clock) {
         this.restService = restService;
+        this.clock = clock;
     }
 
-    @GetMapping("/admin/reviews")
+    @Override
+    @GetMapping(value = "/admin/reviews", produces = MediaType.TEXT_HTML_VALUE)
     public String getVaultsForReview(ModelMap model) {
-
         VaultsData vaultsData = restService.getVaultsForReview();
-        List<VaultInfo> vaultsInfo = vaultsData.getData();
-
+        List<VaultInfo> vaultsInfo = Utils.getSafeStream(vaultsData.getData()).sorted(BY_REVIEW_DATE_ASC).toList();
+        vaultsInfo.forEach(this::addVaultReviewStatusInfo);
+        
         model.addAttribute("vaults", vaultsInfo);
-
         return "admin/reviews/index";
     }
 
+    void addVaultReviewStatusInfo(VaultInfo info) {
+        VaultReviewStatusInfo statusInfo = restService.getVaultReviewStatusInfo(info.getID());
+        info.setVaultReviewStatusInfo(statusInfo);
+    }
+
     // Return a review page
-    @GetMapping("/admin/vaults/{vaultid}/reviews")
-    public String showReview(ModelMap model, 
-                             @PathVariable("vaultid") String vaultID, 
+    @Override
+    @GetMapping(value = "/admin/vaults/{vaultId}/reviews", produces = MediaType.TEXT_HTML_VALUE)
+    public String showReview(ModelMap model,
+                             @PathVariable String vaultId,
                              @RequestParam(value = "error", required = false) String error) {
 
         if (error != null) {
             if (error.equals("reviewdate")) {
-                model.addAttribute("error", "If some deposits are to be retained then a new Review Date must be entered");
+                model.addAttribute("error", "If some deposits are to be retained then a next Review Date must be entered");
             }
         }
 
-        VaultInfo vault = restService.getVault(vaultID);
+        VaultInfo vault = restService.getVault(vaultId);
         model.addAttribute("vault", vault);
 
-        List<RoleAssignment> roleAssignmentsForVault = restService.getRoleAssignmentsForVault(vaultID);
+        List<RoleAssignment> roleAssignmentsForVault = restService.getRoleAssignmentsForVault(vaultId);
 
-        List<RoleAssignment> dataManagers = roleAssignmentsForVault.stream()
+        List<RoleAssignment> dataManagers = Utils.getSafeStream(roleAssignmentsForVault)
+                .filter(Objects::nonNull)
                 .filter(roleAssignment -> RoleUtils.isRoleOfName(roleAssignment, "Nominated Data Manager"))
-                .collect(Collectors.toList());
+                .toList();
         model.addAttribute("dataManagers", dataManagers);
 
         roleAssignmentsForVault.stream()
+                .filter(Objects::nonNull)
                 .filter(RoleUtils::isDataOwner)
                 .findFirst()
                 .ifPresent(roleAssignment -> model.addAttribute("dataOwner", roleAssignment));
 
-        model.addAttribute("createRetentionPolicy", restService.getRetentionPolicy(vault.getPolicyID()));
-        model.addAttribute(restService.getGroup(vault.getGroupID()));
+        CreateRetentionPolicy retentionPolicy = restService.getRetentionPolicy(vault.getPolicyID());
+        model.addAttribute("createRetentionPolicy", retentionPolicy);
+        model.addAttribute("group", restService.getGroup(vault.getGroupID()));
 
-        ReviewInfo reviewInfo = restService.getCurrentReview(vaultID);
+        // for existing 'underway' VaultReview - makes sure it has a DepositReview for each of the Vault's Deposits
+        boolean depositReviewsAdded = restService.refreshUnderwayVaultReview(vaultId);
+        LOG.info("POST REFRESH FOR VAULT[{}] depositReviewsAdded is [{}]", vault.getName(), depositReviewsAdded);
+
+        ReviewInfo reviewInfo = restService.getCurrentReview(vaultId);
         if (reviewInfo == null) {
-            // There isn't a current review so create one.
-            reviewInfo = restService.createCurrentReview(vaultID);
+            // There isn't a current review, so create one.
+            reviewInfo = restService.createCurrentReview(vaultId);
         }
-
+        
         VaultReview currentReview = restService.getVaultReview(reviewInfo.getVaultReviewId());
-        VaultReviewModel vaultReviewModel = new VaultReviewModel(currentReview);
+        VaultReviewModel vaultReviewModel = new VaultReviewModel(currentReview, vault.getReviewDate());
 
-        List<DepositReviewModel> depositReviewModels = new ArrayList<>();
-        for (int i = 0; i < reviewInfo.getDepositReviewIds().size(); i++) {
-            String depositReviewId = reviewInfo.getDepositReviewIds().get(i);
-            String depositId = reviewInfo.getDepositIds().get(i);
-            DepositInfo depositInfo = restService.getDeposit(depositId);
-            DepositReview depositReview = restService.getDepositReview(depositReviewId);
-            DepositReviewModel drm = new DepositReviewModel();
+        int sizeDepositReviewIds = reviewInfo.getDepositReviewIds().size();
+        int sizeDepositIds = reviewInfo.getDepositIds().size();
+        
+        Assert.isTrue(sizeDepositIds >= sizeDepositReviewIds, "size of depositIds not >= to size of depositReviewIds");
 
-            // Set DepositReview stuff
-            drm.setDepositReviewId(depositReview.getId());
-            drm.setDeleteStatus(depositReview.getDeleteStatus());
-            drm.setComment(depositReview.getComment());
-
-            // Set Deposit stuff
-            drm.setDepositId(depositInfo.getID());
-            drm.setName(depositInfo.getName());
-            drm.setStatusName(depositInfo.getStatus().name());
-            drm.setCreationTime(depositInfo.getCreationTime());
-
-            depositReviewModels.sort(Comparator.comparing(DepositReviewModel::getCreationTime));
-            depositReviewModels.add(drm);
-        }
-
-        vaultReviewModel.setDepositReviewModels(depositReviewModels);
+        vaultReviewModel.setDepositReviewModels(buildDepositReviewModels(reviewInfo));
 
         model.addAttribute("createRetentionPolicy", new CreateRetentionPolicy());
         model.addAttribute("vaultReviewModel", vaultReviewModel);
@@ -122,88 +132,165 @@ public class AdminReviewsController {
         return "admin/reviews/create";
     }
 
+    private List<DepositReviewModel> buildDepositReviewModels(ReviewInfo reviewInfo) {
+        Assert.notNull(reviewInfo, "ReviewInfo must not be null");
 
+        List<DepositReviewModel> result = new ArrayList<>();
+        for (int i = 0; i < reviewInfo.getDepositReviewIds().size(); i++) {
+
+            String depositReviewId = reviewInfo.getDepositReviewIds().get(i);
+            String depositId = reviewInfo.getDepositIds().get(i);
+
+            var drm = buildDepositReviewModel(depositReviewId, depositId);
+            result.add(drm);
+        }
+
+        result.sort(DepositReviewModel.BY_DEPOSIT_CREATION_TIME);
+        return result;
+    }
+
+    private DepositReviewModel buildDepositReviewModel(String depositReviewId, String depositId) {
+        DepositReviewModel drm = new DepositReviewModel();
+
+        DepositInfo depositInfo = restService.getDeposit(depositId);
+        DepositReview depositReview = restService.getDepositReview(depositReviewId);
+
+        drm.updateFromDepositReviewAndDepositInfo(depositReview, depositInfo);
+        return drm;
+    }
 
     // Process the completed review page
-    @RequestMapping(value = "/admin/vaults/{vaultid}/reviews/{reviewid}", method = RequestMethod.POST)
+    @Override
+    @PostMapping(value = "/admin/vaults/{vaultId}/reviews/{reviewId}", consumes = MediaType.APPLICATION_FORM_URLENCODED_VALUE)
     public String processReview(@ModelAttribute VaultReviewModel vaultReviewModel,
-                                ModelMap model,
                                 RedirectAttributes redirectAttributes,
-                                @PathVariable("vaultid") String vaultID,
-                                @PathVariable("reviewid") String reviewID,
+                                @PathVariable String vaultId,
+                                @PathVariable String reviewId,
                                 @RequestParam String action) {
 
+        Assert.notNull(vaultReviewModel, "VaultReviewModel must not be null");
+        
         // Note - The ModelAttributes made available here are not the same objects as those passed to the View,
         // they only contain the values entered on screen. With that in mind, fetch the original objects again and
         // update them appropriately.
 
-        if ("Cancel".equals(action)) {
+        if (ACTION_CANCEL.equals(action)) {
             return "redirect:/admin/reviews";
         }
 
-        if ("Submit".equals(action)) {
-            // Throw back an error if a new review date has not been entered but some deposits are being retained.
-            if (vaultReviewModel.getNewReviewDate() == null) {
-                if (vaultReviewModel.getDepositReviewModels() != null) {
-                    for (DepositReviewModel drm : vaultReviewModel.getDepositReviewModels()) {
-                        if (drm.getDeleteStatus() == DepositReviewDeleteStatus.RETAIN) {
-                            redirectAttributes.addAttribute("error", "reviewdate");
-                            return "redirect:/admin/vaults/" + vaultID + "/reviews";
-                        }
-                    }
-                }
+        if (ACTION_SUBMIT.equals(action)) {
+            if (!validateNextReviewDate(vaultReviewModel, redirectAttributes)) {
+                return "redirect:/admin/vaults/" + vaultId + "/reviews";
             }
         }
 
-        // Get the old stuff and update it
-        VaultReview originalReview = restService.getVaultReview(reviewID);
-        originalReview.setNewReviewDate(vaultReviewModel.getNewReviewDate());
-        originalReview.setComment(vaultReviewModel.getComment());
+        LocalDateTime now = LocalDateTime.now(clock);
 
-        if ("Submit".equals(action)) {
-            originalReview.setActionedDate(new Date());
+        VaultReview originalVaultReview = restService.getVaultReview(reviewId);
 
-            // Save the old review date in the VaultReview
-            VaultInfo vault = restService.getVault(vaultID);
-            originalReview.setOldReviewDate(vault.getReviewDate());
+        updateVaultReviewAndVault(originalVaultReview, vaultReviewModel, vaultId, now, action);
 
-            // And update the review date in the Vault if a new one has been entered
-            if (vaultReviewModel.getNewReviewDate() != null) {
-                // Update the review date in the Vault object.
-                logger.info("Editing Review Date for Vault id " + vaultID + " with new Review Date " + vaultReviewModel.getNewReviewDate());
-                restService.updateVaultReviewDate(vaultID, vaultReviewModel.getNewReviewDate());
-            }
-        }
+        List<DepositReviewModel> depositReviewModels = vaultReviewModel.getDepositReviewModels();
 
-        logger.info("Editing Vault Review id " + originalReview.getId());
-        restService.editVaultReview(originalReview);
-
-        if (vaultReviewModel.getDepositReviewModels() != null) {
-            for (DepositReviewModel drm : vaultReviewModel.getDepositReviewModels()) {
-                DepositReview originalDepositReview = restService.getDepositReview(drm.getDepositReviewId());
-                originalDepositReview.setDeleteStatus(drm.getDeleteStatus());
-                originalDepositReview.setComment(drm.getComment());
-
-                if ("Submit".equals(action)) {
-                    if (drm.getDeleteStatus() == DepositReviewDeleteStatus.NOW) {
-                        // Stand back everyone!
-                        logger.info("Deleting deposit id " + drm.getDepositId());
-                        originalDepositReview.setActionedDate(new Date());
-                        restService.deleteDeposit(drm.getDepositId());
-                    } else if (drm.getDeleteStatus() == DepositReviewDeleteStatus.RETAIN) {
-                        logger.info("Retaining deposit id " + drm.getDepositId());
-                        originalDepositReview.setActionedDate(new Date());
-                    } // Otherwise it has been flagged to be deleted later.
-                }
-
-                logger.info("Editing Deposit Review id " + originalDepositReview.getId());
-                restService.editDepositReview(originalDepositReview);
-            }
-        }
+        //noinspection CodeBlock2Expr
+        getSafeStream(depositReviewModels).forEach(drm -> {
+            processSingleDepositReview(drm, now, action);
+        });
 
         return "redirect:/admin/reviews";
     }
 
+    /**
+     * You cannot have a DepositReviewModel:RETAIN without a non-null nextReviewDate
+     * @param vaultReviewModel
+     * @param redirectAttributes
+     * @return false if there's no NEW REVIEW DATE and at least 1 DRM with "retain".
+     */
+    protected boolean validateNextReviewDate(VaultReviewModel vaultReviewModel, RedirectAttributes redirectAttributes) {
+        
+        if (vaultReviewModel.getNextReviewDate() != null) {
+            return true;
+        }
+
+        List<DepositReviewModel> depositReviewModels = vaultReviewModel.getDepositReviewModels();
+        if (depositReviewModels == null) {
+            return true;
+        }
+        for (DepositReviewModel drm : depositReviewModels) {
+            if (drm == null) {
+                continue;
+            }
+            if (drm.getDeleteStatus() == DepositReviewDeleteStatus.RETAIN) {
+                redirectAttributes.addAttribute("error", "reviewdate");
+                return false;
+            }
+        }
+        return true;
+    }
+
+
+    protected void updateVaultReviewAndVault(VaultReview originalVaultReview, VaultReviewModel vrm, String vaultID, LocalDateTime now, String action) {
+        Assert.notNull(originalVaultReview, "originalVaultReview cannot be null");
+        Assert.notNull(vrm, "vaultReviewModel cannot be null");
+
+        // WHEN YOU Save or Submit a VaultReivew - the comment is saved
+        originalVaultReview.setComment(vrm.getComment());
+
+        if (ACTION_SUBMIT.equals(action)) {
+            originalVaultReview.setActionedDate(now);
+
+            Assert.isTrue(StringUtils.isNotBlank(vaultID), "The vaultId cannot be blank");
+            VaultInfo vault = restService.getVault(vaultID);
+
+            // copy the current 'Vault.reviewDate' into 'originalVaultReview.oldReviewDate'
+            originalVaultReview.setOldReviewDate(vault.getReviewDate());
+
+            // the nextReviewDate is the used to update the Vault.reviewDate FOR THE NEXT REVIEW - not this one.
+            LocalDate nextReviewDate = vrm.getNextReviewDate();
+            if (nextReviewDate != null) {
+                LOG.info("Editing Review Date for Vault id {} with new Review Date {}", vaultID, nextReviewDate);
+                // the nextReviewDate is the used to update the Vault.reviewDate FOR THE NEXT REVIEW - not this one.
+                restService.updateReviewDateOfVault(vaultID, nextReviewDate);
+            }
+        }
+
+        LOG.info("Editing Vault Review id {}", originalVaultReview.getId());
+        restService.editVaultReview(originalVaultReview);
+    }
+
+    protected void processSingleDepositReview(DepositReviewModel drm, LocalDateTime now, String action) {
+        Assert.notNull(drm, "The depositReviewModel cannot be null");
+        DepositReview originalDepositReview = restService.getDepositReview(drm.getDepositReviewId());
+        originalDepositReview.setDeleteStatus(drm.getDeleteStatus());
+        originalDepositReview.setComment(drm.getComment());
+
+        if (ACTION_SUBMIT.equals(action)) {
+            if (drm.getDeleteStatus() == DepositReviewDeleteStatus.NOW) {
+                originalDepositReview.setActionedDate(now);
+                LOG.info("Deleting deposit id {}", drm.getDepositId());
+                restService.deleteDeposit(drm.getDepositId());
+            } else if (drm.getDeleteStatus() == DepositReviewDeleteStatus.RETAIN) {
+                originalDepositReview.setActionedDate(now);
+                LOG.info("Retaining deposit id {}", drm.getDepositId());
+            }
+        }
+        LOG.info("Editing Deposit Review id {}", originalDepositReview.getId());
+        restService.editDepositReview(originalDepositReview);
+    }
+    
+    @GetMapping("/admin/reviews/vaults/search")
+    @ResponseBody
+    @Override
+    public PageDTOVaultInfo searchVaultsForReview(
+            @RequestParam("q")
+            String partialVaultName) {
+
+        PageDTOVaultInfo result = restService.searchVaultsForReview(partialVaultName);
+        result.getContent().sort(BY_REVIEW_DATE_ASC);
+        result.getContent().stream().filter(Objects::nonNull).forEach(this::addVaultReviewStatusInfo);
+        return result;
+    }   
+    
 }
 
 
